--- a/server/views/index.marko
+++ b/server/views/index.marko
@@ -316,7 +316,7 @@
                     </div>
                     <div class="form-group">
                       <label for="desc">Description</label>
-                      <textarea type="text" class="form-control" id="desc" placeholder="Description of the cap" name="desc">${cap.title}</textarea>
+                      <textarea type="text" class="form-control" id="desc" placeholder="Description of the cap" name="desc">${cap.desc}</textarea>
                     </div>
                     <div class="form-group">
                       <label for="url">Image URL</label>
